ims: use Collections.unmodifiableSet for msmsinfo